# logupdate.py

./: .gitignore  .travis.yml  LICENSE  Pipfile  README.md  long_example.py  pyproject.toml  setup.py  simple_example.py  tox.ini
examples/: logupdate_spinner.py  long_example.py  simple_example.py
logupdate/: __init__.py  core.py
test/: test_logupdate.py
tests/: test_logupdate.py
