[tool.poetry]
name = "logupdate"
version = "0.3.1"
description = "Log by overwriting the previous output in the terminal"
authors = ["Adriean Khisbe <adriean.khisbe@live.fr>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/CoorpAcademy/pino.py"
keywords = ["cli", "terminal", "log", "logger", "logging", "shell", "update", "animation", "progress"]
classifiers=[
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging"
]
packages = [{ include = "logupdate" }]

[tool.poetry.dependencies]
python = "^3.6"
ansiwrap = "^0.8.4"
cursor = "^1.3.4"

[tool.poetry.dev-dependencies]
taskipy = "^1.2.1"
pyte = "^0.8.0"
pytest = "^5.4.1"
pylint = "^2.4.4"
tox = "^3.14.6"
tox-pyenv = "^1.1.0"
tox-travis = "^0.12"
pytest-cov = "^2.8.1"
codecov = "^2.0.22"

[tool.taskipy.tasks]
test = "tox"
pytest = "python -m pytest --cov=logupdate"
clean = "rm -r build dist pino.egg-info .tox .pytest_cache .coverage"

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py38,py37,py36

[testenv]
deps =
  pyte
  pytest
  pytest-cov
commands =
  pytest --cov={envsitepackagesdir}/logupdate
"""
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

